force-app/main/default/objects/custom_create29__c/custom_create29__c.object-meta.xml
<CustomObject>
    <label>Custom created object29</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects29</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>