force-app/main/default/objects/custom_create29__c/fields/custom_create_29field584__c.field-meta.xml
<CustomField>
    <fullName>custom_create_29field584__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 29field584</label>
    <type>Checkbox</type>
</CustomField>